eureka/eureka-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    run: eureka
  name: eureka
spec:
  replicas: 1
  selector:
    run: eureka
  template:
    metadata:
      labels:
        run: eureka
    spec:
      containers:
      - args:
        - -jar
        - /app/erp/eureka.jar
        - --eureka.client.serviceUrl.defaultZone=http://eureka:18761/eureka/
        command:
        - /jdk/bin/java
        image: registry.regionone.example.com/eureka/eureka:v1
        imagePullPolicy: Always
        name: eureka
        ports:
        - containerPort: 18761
          protocol: TCP
  test: false
  triggers:
  - type: ConfigChange
