eureka/eureka-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: eureka
  name: eureka
spec:
  ports:
  - name: tcp
    port: 18761
    protocol: TCP
    targetPort: 18761
  selector:
    run: eureka
  sessionAffinity: None
  type: ClusterIP
